// Vitest Snapshot v1

exports[`_Cc_Timeコンポーネントのテスト > ViewModelのテスト > ブラックボックステスト > 同値・境界値テスト > formattedTime prop > 有効同値 > MM月DD日(ddd) HH:mm を入力した場合「02月01日(水) 00:00」と表示すること 1`] = `
<time
  datetime="2023-02-01T00:00"
>
  02月01日(水) 00:00
</time>
`;

exports[`_Cc_Timeコンポーネントのテスト > ViewModelのテスト > ブラックボックステスト > 同値・境界値テスト > unixTime prop > 境界値のテスト > 0を入力した場合「1970年01月01日(木) 09:00」と表示すること 1`] = `
<time
  datetime="1970-01-01T09:00"
>
  1970年01月01日(木) 09:00
</time>
`;

exports[`_Cc_Timeコンポーネントのテスト > ViewModelのテスト > ブラックボックステスト > 同値・境界値テスト > unixTime prop > 境界値のテスト > 7258086000を入力した場合「2200年01月01日(水) 00:00」と表示すること 1`] = `
<time
  datetime="2200-01-01T00:00"
>
  2200年01月01日(水) 00:00
</time>
`;

exports[`_Cc_Timeコンポーネントのテスト > ViewModelのテスト > ブラックボックステスト > 同値・境界値テスト > unixTime prop > 有効同値 > 1675177200を入力した場合「2023年02月01日(水) 00:00」と表示すること 1`] = `
<time
  datetime="2023-02-01T00:00"
>
  2023年02月01日(水) 00:00
</time>
`;
